src/objects/tz__Local_Time_Error_Log__c.object
<CustomObject>
    <description>Local Time App - Maintains error log records.</description>
    <fields>
        <fullName>tz__Message__c</fullName>
        <description>Detailed error message.</description>
        <inlineHelpText>Detailed error message.</inlineHelpText>
        <label>Message</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>tz__Quiddity__c</fullName>
        <description>Quiddity value which identifies the type of execution event associated with the current request.</description>
        <inlineHelpText>Quiddity value which identifies the type of execution event associated with the current request.</inlineHelpText>
        <label>Quiddity</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tz__Record_Id__c</fullName>
        <label>Record Id</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tz__Record__c</fullName>
        <formula>HYPERLINK(&quot;/&quot;+ tz__Record_Id__c , &quot;View Record&quot;, &quot;_blank&quot;)</formula>
        <label>Record</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tz__Request_Id__c</fullName>
        <description>Request Id of the current Request object.</description>
        <inlineHelpText>Request Id of the current Request object.</inlineHelpText>
        <label>Request Id</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tz__Severity__c</fullName>
        <description>Severity of the log message.</description>
        <inlineHelpText>Severity of the log message.</inlineHelpText>
        <label>Severity</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <label>Local Time Error Log</label>
    <listViews>
        <fullName>tz__All</fullName>
        <columns>NAME</columns>
        <columns>tz__Quiddity__c</columns>
        <columns>tz__Request_Id__c</columns>
        <columns>tz__Severity__c</columns>
        <columns>tz__Message__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>LT-{0000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Local Time Error Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>